5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1834_2603.log
== TEST (2019-07-01 21:05:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=shape(matriz)[1]
vetor=zeros(s,dtype=int)
vetor=sorted(vetor,reverse=trued)
for i in range(vetor):
	for j in range(vetor):
		matriz[i,j]=vetor(i,j)
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:05:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=shape(matriz)[1]
vetor=zeros(s,dtype=int)
vetor=sorted(vetor,reverse=true)
for i in range(vetor):
	for j in range(vetor):
		matriz[i,j]=vetor(i,j)
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:05:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=shape(matriz)[1]
vetor=zeros(s,dtype=int)
vetor=sorted(vetor,reverse=Yrue)
for i in range(vetor):
	for j in range(vetor):
		matriz[i,j]=vetor(i,j)
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:05:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=shape(matriz)[1]
vetor=zeros(s,dtype=int)
vetor=sorted(vetor,reverse=True)
for i in range(vetor):
	for j in range(vetor):
		matriz[i,j]=vetor(i,j)
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:06:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=shape(matriz)[1]
vetor=zeros(s,dtype=int)
vetor=sorted(vetor,reverse=True)
for i in range(vetor):
	for j in range(vetor):
		matriz[i,j]=vetor(i,j)
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:06:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=shape(matriz)[1]
vetor=zeros(s,dtype=int)
vetor=sorted(vetor,reverse=True)
for i in range(matriz):
	for j in range(matriz):
		matriz[i,j]=vetor(i,j)
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:07:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=shape(matriz)[1]
vetor=zeros(s,dtype=int)
vetor=sorted(vetor,reverse=True)
for i in range(size(vetor)):
	for j in range(size(vetor)):
		matriz[i,j]=vetor(i,j)
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:07:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=shape(matriz)[1]
vetor=zeros(s,dtype=int)
vetor=sorted(vetor,reverse=True)
for i in range(size(vetor)):
	for j in range(size(vetor)):
		matriz[i,j]=vetor[i,j]
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:07:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

vetor=shape(matriz)[1]
vetor=sorted(vetor,reverse=True)
for i in range(size(vetor)):
	for j in range(size(vetor)):
		matriz[i,j]=vetor[i,j]
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:08:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

vetor=(shape(matriz)[1],dtype=int)

vetor=sorted(vetor,reverse=True)
for i in range(size(vetor)):
	for j in range(size(vetor)):
		matriz[i,j]=vetor[i,j]
print(matriz)
-- ERROR:
File "XXXX", line 6
    vetor=(shape(matriz)[1],dtype=int)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:09:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

vetor=(shape(matriz)[1],dtype=int)

vetor=sorted(vetor,reverse=True)
for i in range(size(vetor)):
	for j in range(size(vetor)):
		matriz[i,j]=vetor[i,j]
print(matriz)
-- ERROR:
File "XXXX", line 6
    vetor=(shape(matriz)[1],dtype=int)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:10:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

vetor=(shape(matriz)[1])

for i in range(vetor):
	for j in range(size(vetor)):
		matriz[i,j]=vetor[i,j]
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:10:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

vetor=(shape(matriz)[1])

for i in range(vetor):
	for j in range(size(vetor)):
		matriz(i,j)=vetor[i,j]
print(matriz)
-- ERROR:
File "XXXX", line 10
    matriz(i,j)=vetor[i,j]
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:11:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

vetor=(shape(matriz)[1])

for i in range(vetor):
	for j in range(size(vetor)):
		matriz[i,j]=vetor(i,j)
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:11:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

vetor=(shape(matriz)[1])

for i in range(vetor):
	for j in range(size(vetor)):
		matriz[i,j]=vetor=sorted(vetor(i,j),reverse=True)
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:12:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

vetor=(shape(matriz)[1])

for i in range(vetor):
	for j in range(size(vetor)):
		matriz[i,j]=vetor=sorted(vetor(i,j),reverse=True)
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:12:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

vetor=(shape(matriz)[1])

for i in range(vetor):
	for j in range(vetor):
		matriz[i,j]=vetor=sorted(vetor(i,j),reverse=True)
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:20:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

vetor=(shape(matriz)[1])
vetor_reverso=sorted(vetor,reverse=True)
for i in range(vetor):
	for j in range(vetor):
		matriz[i,j]=vetor_reverso(i,j)
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:03:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

vetor=(shape(matriz)[1])
s=zeros(vetor,dtype=int)
vetor_reverso=sorted(vetor,reverse=True)
for i in range(s):
	for j in range(s):
		matriz[i,j]=vetor_reverso(i,j)
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:05:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

vetor=(shape(matriz)[1])
s=zeros(vetor,dtype=int)
for i in range(s):
	for j in range(s):
		matriz[i,j]=matriz[i,;-n]
print(matriz)
-- ERROR:
File "XXXX", line 10
    matriz[i,j]=matriz[i,;-n]
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:05:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

vetor=(shape(matriz)[1])
s=zeros(vetor,dtype=int)
for i in range(s):
	for j in range(s):
		matriz[i,j]=matriz[i,:-n]
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:06:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

vetor=(shape(matriz)[1])
s=zeros(vetor,dtype=int)
for i in range(vetor):
	for j in range(vetor):
		matriz[i,j]=matriz[i,:-n]
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:06:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

vetor=(shape(matriz)[1])
s=zeros(vetor,dtype=int)
for i in range(vetor):
	for j in range(vetor):
		matriz[i,j]=matriz[i,:-j]
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:11:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

vetor=(shape(matriz)[1])
s=zeros(vetor,dtype=int)

print(linal.inverse(matriz))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:11:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

vetor=(shape(matriz)[1])
s=zeros(vetor,dtype=int)

print(linalg.inverse(matriz))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:11:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

vetor=(shape(matriz)[1])
s=zeros(vetor,dtype=int)

print(linalg.inv(matriz))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:14:30) 
-- CODE:
from numpy import*
from numpy.linalg import inv

matriz=array(eval(input("")))

s=inv(matriz)

print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:14:57) 
-- CODE:
from numpy import*
from numpy.linalg import *

matriz=array(eval(input("")))

s=inv(matriz)

print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:15:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=inv(matriz)

print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:44:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))
s=shape(matriz).[0]
vetor=zeros(s,dtype=int)
for i in range(matriz):
	for j in range(matriz):
		s[i,j]=sorted(matriz,reverse=True)
print(s)
-- ERROR:
File "XXXX", line 5
    s=shape(matriz).[0]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:45:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))
s=matriz.shape[0]
vetor=zeros(s,dtype=int)
for i in range(matriz):
	for j in range(matriz):
		s[i,j]=sorted(matriz,reverse=True)
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:45:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))
s=matriz.shape[0]
vetor=zeros(s,dtype=int)
for i in range(vetor):
	for j in range(vetor):
		s[i,j]=sorted(matriz,reverse=True)
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:55:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))
s=matriz.shape[0]
vetor=zeros(s,dtype=int)
for i in range(s):
	for j in range(s):
		s[i,j]=sorted(matriz,reverse=True)
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:56:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))
s=matriz.shape[0]
vetor=zeros(s,dtype=int)
for i in range(s):
	for j in range(s):
		s(i,j)=sorted(matriz,reverse=True)
print(s)
-- ERROR:
File "XXXX", line 9
    s(i,j)=sorted(matriz,reverse=True)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:56:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))
s=matriz.shape[0]
vetor=zeros(s,dtype=int)
for i in range(s):
	for j in range(s):
		vetor[i,j]=sorted(matriz,reverse=True)
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:57:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))
s=matriz.shape[0]
vetor=zeros(s,dtype=int)
for i in range(s):
	for j in range(s):
		vetor[i,j]=sorted(matriz,reverse=True)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
